--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.application.name=msvc-usuarios
+server.port=8001
+spring.datasource.url=jdbc:mysql://localhost:3306/msvc_usuarios
+spring.datasource.username=root
+spring.datasource.password=sasa
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+logging.level.org.hibernate.SQL=debug
