--- a/msvc-usuarios/Dockerfile
+++ b/msvc-usuarios/Dockerfile
@@ -23,6 +23,8 @@ FROM openjdk:17-jdk-alpine
 
 WORKDIR /app
 
+RUN mkdir ./logs
+
 COPY --from=builder /app/msvc-usuarios/target/msvc-usuarios-0.0.1-SNAPSHOT.jar .
 
 EXPOSE 8001
