--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
+
+logging.file.path=/app/logs
