--- a/msvc-usuarios/Dockerfile
+++ b/msvc-usuarios/Dockerfile
@@ -32,3 +32,8 @@ EXPOSE 8001
 #No permite ingresar un comando de inicio, como la ejecución de una consola, cmd si lo permite
 #ENTRYPOINT ["java", "-jar", "msvc-usuarios-0.0.1-SNAPSHOT.jar"]
 CMD ["java", "-jar", "msvc-usuarios-0.0.1-SNAPSHOT.jar"]
+
+##docker run -d -p 3307:3306 --name mysql8 --network spring -e MYSQL_ROOT_PASSWORD=sasa -e MYSQL_DATABASE=msvc_usuarios -v data-mysql:/var/lib/mysql --restart=always mysql:8
+##docker run -p 5532:5432 --name postgres14 --network spring -e POSTGRES_PASSWORD=sasa -e POSTGRES_DB=msvc_cursos -d -v data-postgres:/var/lib/postgresql/data --restart=always postgres:14-alpine
+##docker run -d -p 8002:8002 --name msvc-cursos --network spring cursos
+##docker run -d -p 8001:8001 --name msvc-usuarios --network spring usuarios
