--- a/msvc-cursos/src/main/resources/application.properties
+++ b/msvc-cursos/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=msvc-cursos
-server.port=8002
+server.port=${PORT:8002}
 ##spring.datasource.url=jdbc:postgresql://localhost:5432/msvc_cursos
 ##spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/msvc_cursos
-spring.datasource.url=jdbc:postgresql://postgres14:5432/msvc_cursos
-spring.datasource.username=postgres
-spring.datasource.password=sasa
+spring.datasource.url=jdbc:postgresql://${DB_HOST:postgres14:5432}/${DB_DATABASE:msvc_cursos}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:sasa}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+msvc.usuarios.url=${USUARIOS_URL:msvc-usuarios:8001}
