--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   mysql8:
+    container_name: mysql8
     image: mysql:8
     ports:
       - "3307:3306"
@@ -16,6 +17,7 @@ services:
       - spring
 
   postgres14:
+    container_name: postgres14
     image: postgres:14-alpine
     ports:
       - "5532:5432"
@@ -29,7 +31,11 @@ services:
       - spring
 
   msvc-usuarios:
+    container_name: msvc-usuarios
     image: usuarios:latest
+    build:
+      context: ./
+      dockerfile: ./msvc-usuarios/Dockerfile
     ports:
       - "8001:8001"
     env_file: ./msvc-usuarios/.env
@@ -41,7 +47,11 @@ services:
 
 
   msvc-cursos:
+    container_name: msvc-cursos
     image: cursos:latest
+    build:
+      context: ./
+      dockerfile: ./msvc-cursos/Dockerfile
     ports:
       - "8002:8002"
     env_file:
@@ -50,11 +60,15 @@ services:
       - spring
     depends_on:
       - postgres14
+      - msvc-usuarios
     restart: always
 
 volumes:
   data-mysql:
+    name: data-mysql
   data-postgres:
+    name: data-postgres
 
 networks:
   spring:
+    name: spring
