--- a/msvc-cursos/src/main/resources/application.properties
+++ b/msvc-cursos/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-msvc.usuarios.url=${USUARIOS_URL:msvc-usuarios:8001}
+#msvc.usuarios.url=${USUARIOS_URL:msvc-usuarios:8001}
+spring.cloud.kubernetes.secrets.enable-api=true
+spring.cloud.kubernetes.discovery.all-namespaces=true
