--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -12,4 +12,7 @@ logging.level.org.hibernate.SQL=debug
 
 logging.file.path=/app/logs
 
-msvc.cursos.url=${CURSOS_URL:msvc-cursos:8002}
+#No es necesario especificar, con Spring Cloud Kubernetes, ya que el @EnableDiscoveryClient ya se encarga de ello
+#msvc.cursos.url=${CURSOS_URL:msvc-cursos:8002}
+spring.cloud.kubernetes.secrets.enable-api=true
+spring.cloud.kubernetes.discovery.all-namespaces=true
