130223 Profiles, Actuator y Resources

--- a/configmap.yaml
+++ b/configmap.yaml
@@ -10,9 +10,23 @@ data:
   password: sasa
   curso_url: "msvc-cursos:8002"
   config.texto: Configurando ambiente por defecto
-#  application.yaml: |-
-#    config:
-#      texto: Configurando ambiente por defecto
+  application.yaml: |-
+    config:
+      texto: Configurando ambiente por defecto
+    ---
+    spring:
+      config:
+        activate:
+          on-profile: dev
+    config:
+      texto: Configurando ambiente de desarrollo
+    ---
+    spring:
+      config:
+        activate:
+          on-profile: prod
+    config:
+      texto: Configurando ambiente de producción
 ---
 apiVersion: v1
 kind: ConfigMap
