--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -16,3 +16,10 @@ logging.file.path=/app/logs
 #msvc.cursos.url=${CURSOS_URL:msvc-cursos:8002}
 spring.cloud.kubernetes.secrets.enable-api=true
 spring.cloud.kubernetes.discovery.all-namespaces=true
+spring.profiles.active=dev
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
