--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.1</version>
+        <version>3.0.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.kosovito.springcloud.msvc</groupId>
@@ -18,6 +18,7 @@
     <modules>
         <module>msvc-usuarios</module>
         <module>msvc-cursos</module>
+        <module>msvc-gateway</module>
     </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
