--- a/pvc-mysql.yaml
+++ b/pvc-mysql.yaml
@@ -5,7 +5,10 @@ metadata:
 spec:
   volumeName: pv-mysql
   accessModes:
+    #multinodo amazon eks
+#    - ReadWriteMany
     - ReadWriteOnce
+#  storageClassName: ""
   storageClassName: standard
   resources:
     requests:
