--- a/msvc-usuarios/src/main/resources/application.yml
+++ b/msvc-usuarios/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   security:
     oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${LB_AUTH_ISSUER_URI:http://127.0.0.1:9000}
       client:
         registration:
           msvc-usuarios-client:
@@ -8,9 +11,9 @@ spring:
             client-id: usuarios-client
             client-secret: 12345
             authorization-grant-type: authorization_code
-            redirect-uri: "http://127.0.0.1:8001/authorized"
+            redirect-uri: ${LB_USUARIOS_URI:http://127.0.0.1:8001}/authorized
             scope: read
             client-name: msvc-usuarios-client
         provider:
           spring:
-            issuer-uri: http://127.0.0.1:9000
+            issuer-uri: ${LB_AUTH_ISSUER_URI:http://127.0.0.1:9000}
